// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeroMetric matches snapshot in dark theme 1`] = `
<div
  class="css-view-g5y9jx"
  style="border-top-left-radius: 22px; border-top-right-radius: 22px; border-bottom-right-radius: 22px; border-bottom-left-radius: 22px; border-top-color: rgba(213,226,210,0.08); border-right-color: rgba(213,226,210,0.08); border-bottom-color: rgba(213,226,210,0.08); border-left-color: rgba(213,226,210,0.08); background-color: rgb(24, 33, 28);"
>
  <div
    class="css-view-g5y9jx r-gap-1cmwbt1"
  >
    <div
      class="css-view-g5y9jx r-alignItems-1awozwy r-flexDirection-18u37iz r-justifyContent-1wtj0ep"
    >
      <div
        class="css-text-146c3p1 r-fontSize-1gkfh8e r-fontWeight-b88u0q r-letterSpacing-1lybf8k"
        dir="auto"
        style="color: rgb(136, 150, 134);"
      >
        NET WORTH
      </div>
    </div>
    <div
      class="css-text-146c3p1 r-fontSize-xb2eav r-fontVariant-1ghxqbu r-fontWeight-b88u0q r-lineHeight-146t82q"
      dir="auto"
      style="color: rgb(230, 236, 228);"
    >
      $123,457
    </div>
    <div
      class="css-view-g5y9jx"
      data-testid="hero-delta-pill"
      style="border-top-left-radius: 28px; border-top-right-radius: 28px; border-bottom-right-radius: 28px; border-bottom-left-radius: 28px; border-top-color: rgba(208,138,127,1.00); border-right-color: rgba(208,138,127,1.00); border-bottom-color: rgba(208,138,127,1.00); border-left-color: rgba(208,138,127,1.00); background-color: rgba(208, 138, 127, 0.15);"
    >
      <div
        class="css-text-146c3p1"
        dir="auto"
        style="color: rgb(208, 138, 127);"
      >
        ▼ $1,200 · vs last month
      </div>
    </div>
    <div
      class="css-text-146c3p1 r-marginTop-knv0ih"
      dir="auto"
      style="color: rgb(179, 192, 176);"
    >
      Across all accounts
    </div>
  </div>
</div>
`;

exports[`HeroMetric matches snapshot in light theme 1`] = `
<div
  class="css-view-g5y9jx"
  style="border-top-left-radius: 22px; border-top-right-radius: 22px; border-bottom-right-radius: 22px; border-bottom-left-radius: 22px; border-top-color: rgba(39,48,35,0.08); border-right-color: rgba(39,48,35,0.08); border-bottom-color: rgba(39,48,35,0.08); border-left-color: rgba(39,48,35,0.08); background-color: rgb(254, 252, 247);"
>
  <div
    class="css-view-g5y9jx r-gap-1cmwbt1"
  >
    <div
      class="css-view-g5y9jx r-alignItems-1awozwy r-flexDirection-18u37iz r-justifyContent-1wtj0ep"
    >
      <div
        class="css-text-146c3p1 r-fontSize-1gkfh8e r-fontWeight-b88u0q r-letterSpacing-1lybf8k"
        dir="auto"
        style="color: rgb(127, 140, 121);"
      >
        NET WORTH
      </div>
    </div>
    <div
      class="css-text-146c3p1 r-fontSize-xb2eav r-fontVariant-1ghxqbu r-fontWeight-b88u0q r-lineHeight-146t82q"
      dir="auto"
      style="color: rgb(39, 48, 35);"
    >
      $123,457
    </div>
    <div
      class="css-view-g5y9jx"
      data-testid="hero-delta-pill"
      style="border-top-left-radius: 28px; border-top-right-radius: 28px; border-bottom-right-radius: 28px; border-bottom-left-radius: 28px; border-top-color: rgba(106,135,88,1.00); border-right-color: rgba(106,135,88,1.00); border-bottom-color: rgba(106,135,88,1.00); border-left-color: rgba(106,135,88,1.00); background-color: rgba(106, 135, 88, 0.15);"
    >
      <div
        class="css-text-146c3p1"
        dir="auto"
        style="color: rgb(106, 135, 88);"
      >
        ▲ $2,500 · vs last month
      </div>
    </div>
    <div
      class="css-text-146c3p1 r-marginTop-knv0ih"
      dir="auto"
      style="color: rgb(94, 108, 88);"
    >
      Across all accounts
    </div>
  </div>
</div>
`;
